Fixed the align of the box and text for all cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@
 
 * {
     margin: 0;
+    align-items: inherit;
 }
 
 html, body {
